# game-recommender-ai

./: .gitignore  README.md  docker-compose.yml  env.example  pom.xml  test-data.json
.github/: CODEOWNERS
.github/workflows/: pr-check.yml
contracts/docs/: api-contract.md  chat-message-meta.examples.md  java-python-contract.md
contracts/proto/: reco.proto  tools.proto
docs/contracts/: api-contract.md  chat-message-meta.examples.md  java-phyton-contract.md
infra/: Makefile  docker-compose.dev.yml  docker-compose.yml  env.deployment.example  grafana-dashboard-backend.json  observability-compose.yml  prometheus.yml
infra/grafana/: dashboard-backend.json  dashboard-database.json  dashboard-jvm.json
services/ai-service/: .flake8  Dockerfile  README.md  env.example  mypy.ini  pyproject.toml  pytest.ini  test_deepseek.py  test_json_parsing.py
services/ai-service/app/: grpc_server.py  http_api.py  main.py  reco_pb2.py  reco_pb2_grpc.py
services/ai-service/app/services/: base.py  deepseek_service.py  gigachat_service.py  registry.py  request_id_interceptor.py
services/ai-service/proto/: __init__.py
services/ai-service/tests/: test_deepseek.py  test_sdk.py  test_service.py
services/backend/: Dockerfile  JvmMicrometerDashboard.json  README.md  env.example  pom.xml  prometheus.yml
services/backend/src/main/resources/: application.properties  application.yaml  banner.txt  logback-spring.xml
services/backend/src/test/resources/: application-test.properties
src/main/resources/: application.properties
(+319 files in other folders)
