[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "Python AI service for game recommendations"
authors = ["Nikita Perevalov"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
grpcio = "^1.75.1"
python-dotenv = ">=1.1.1,<2.0.0"
aiohttp = ">=3.12.15,<4.0.0"
grpcio-tools = "^1.75.1"
deepseek-ai = ">=0.0.1,<0.0.2"
httpx = ">=0.28.1,<0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
safety = "^3.2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
